[project]
name = "HongZi"
version = "0.1.0"
description = "HongBot Tianzi FastAPI service."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asyncache>=0.3.1",
    "bson-modern>=1.1.0",
    "cachetools>=5.5.2",
    "cn2an>=0.5.24",
    "fastapi>=0.136.1",
    "fuzzywuzzy>=0.18.0",
    "marisa-trie>=1.4.1",
    "numpy>=2.4.4",
    "orjson>=3.11.9",
    "python-levenshtein>=0.27.3",
    "regex>=2026.5.9",
    "rn2an>=1.0.0",
    "scipy>=1.17.1",
    "uvicorn>=0.46.0",
]
